fix overflow

--- a/src/assets/styles/sass/common/common.sass
+++ b/src/assets/styles/sass/common/common.sass
@@ -1,8 +1,5 @@
 @import ../variables
 
-body, html
-    overflow-x: hidden
-    min-height: 100vh
 
 .apartment-quiz
     font-family: 'Geometria', sans-serif
